# cpp_vk_lib

bot/: main.cpp
bot/src/: main.cpp
lib/: CMakeLists.txt
lib/src/api/: long_poll_api.cpp
